alterando tudo para DMA

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sidlTranscript": {
+    "dmaTranscript": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "sidl",
+            "outputPath": "dma",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -62,10 +62,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "sidlTranscript:build:production"
+              "buildTarget": "dmaTranscript:build:production"
             },
             "development": {
-              "buildTarget": "sidlTranscript:build:development"
+              "buildTarget": "dmaTranscript:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +73,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "sidlTranscript:build"
+            "buildTarget": "dmaTranscript:build"
           }
         },
         "test": {
