--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "sidl-transcript",
+  "name": "dma-transcript",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href=/sidl/",
+    "build": "ng build --base-href=/dma/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:sidlTranscript": "node dist/sidl-transcript/server/server.mjs"
+    "serve:ssr:dmaTranscript": "node dist/dma-transcript/server/server.mjs"
   },
   "private": true,
   "dependencies": {
